2009-12-10  Kai Tietz  <kai.tietz@onevision.com>

	* include/wspiapi.h: Remove inline functions with static members.
	General clean up formatting of this file.

2009-11-27  Kai Tietz  <kai.tietz@onevision.com>

	* rpcndr.h (NDR_SCONTEXT): Add namespace to structure.

2009-11-26  Kai Tietz  <kai.tietz@onevision.com>

	* ntsecapi.h (STRING): Protect by guard.
	(UNICODE_STRING): Likewise.
	* ntsecapi.h: Likewise.

2009-11-21  Jonathan Yong  <jon_y@sourceforge.net>

	* shlobj.h (IDO_SHGIOI_DEFAULT): Define. Original patch by 
	Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (SHARD): Add enum. Original patch by 
	Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (WM_TOUCHMOVE, WM_TOUCHDOWN, WM_TOUCHUP,
	TOUCHEVENTF_DOWN, TOUCHEVENTF_INRANGE, TOUCHEVENTF_MOVE,
	TOUCHEVENTF_NOCOALESCE, TOUCHEVENTF_PALM, TOUCHEVENTF_PEN,
	TOUCHEVENTF_PRIMARY, TOUCHEVENTF_UP, TOUCHEVENTMASKF_CONTACTAREA,
	TOUCHEVENTMASKF_EXTRAINFO, TOUCHEVENTMASKF_TIMEFROMSYSTEM, TOUCHINPUT,
	CloseTouchInputHandle, RegisterTouchWindow,
	UnregisterTouchWindow): Define.
	Original patch by Jarkko Sakkinen  <jarkko.sakkinen@iki.fi>

		2009-13-09  Jacky Lai  <crazyjacky@users.sourceforge.net>

		* include/winerror.h: Fix typos in macro names.

		2009-20-10  Dmitry Potapov  <dpotapov@users.sourceforge.net>

		* include/winver.h (VerQueryValue[AW]): Correct definition.

		2009-20-10  Aleksey Chernov  <virxkane@users.sourceforge.net>

		* include/sspi.h: Include ntsecapi.h to correct postgresql build error.

2009-11-10  Kai Tietz  <kai.tietz@onevision.com>

	* strings.h: Move into ../crt folder.
	* string.h: Likewise.
	* dlfcn.h: Likewise.
	* excpt.h: Likewise.

2009-11-10  NightStrike

	Move C runtime headers into ../crt folder.

2009-11-07  Ivan Maidanski   <ivmai@users.sourceforge.net>

	* sys/utime.h (_futime): New prototype.
	(_wutime): New prototype.

2009-10-24  Roland Schwingel  <roland.schwingel@onevision.com>

	* winternal.h: Improved structure definitions.
