@@ -1,3 +1,8 @@
+2009-12-22  Kai Tietz  <kai.tietz@onevision.com>
+
+	* http.h (HTTP_DATA_CHUNK_TYPE): Add
+	HttpDataChunkFromFragmentCacheEx.
+
 2009-12-10  Kai Tietz  <kai.tietz@onevision.com>
 
 	* include/wspiapi.h: Remove inline functions with static members.
